fix(overflow): 🐛 align scroll buttons with content margin

--- a/resources/skins.citizen.styles/components/OverflowElements.less
+++ b/resources/skins.citizen.styles/components/OverflowElements.less
@@ -55,11 +55,10 @@
 		inset: 0;
 		display: flex;
 		justify-content: space-between;
-		margin-top: var( --space-md );
-		margin-bottom: var( --space-md );
 	}
 
 	&-navButton {
+		width: @overflow-affordnance-size;
 		height: 100%;
 		padding: 0;
 		appearance: none;
@@ -67,7 +66,14 @@
 		background: transparent;
 		border: 0;
 		border-radius: var( --border-radius--small );
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		.hideOverflowButton();
+
+		&::before {
+			width: 1.25rem;
+		}
 
 		&-left {
 			.citizen-overflow--left & {
